[package]
name = "esm-checker"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.3.0"
aws-sdk-dynamodb = "0.3.0"
aws-types = "0.3.0"
futures = "0.3.19"
reqwest = "0.11.8"
serde_json = "1.0.73"
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["full"] }
