[package]
name = "esm-checker"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.4.1"
aws-sdk-dynamodb = "0.4.1"
aws-types = "0.4.1"
chrono = "0.4.19"
futures = "0.3.19"
reqwest = "0.11.8"
serde_json = "1.0.73"
clap = { version = "3.0.7", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
